bush.yml
apiVersion: v1
kind: Service
metadata:
  name: bush-service
spec:
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: bush
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bush-depolyment
spec:
  selector:
    matchLabels:
      app: bush
  replicas: 2
  template:
    metadata:
      labels:
        app: bush
    spec:
      containers:
        - name: bush
          image: 676007236/bush:latest
