redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  ports:
    - port: 6379
      name: redis
      targetPort: 6379
  selector:
      app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-depolyment
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 2
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: bitnami/redis
          ports:
            - containerPort: 6379
              name: redis
              protocol: TCP
