sidekiq.yml
apiVersion: v1
kind: Service
metadata:
  name: sidekiq-service
spec:
  selector:
    app: sidekiq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidekiq-depolyment
spec:
  selector:
    matchLabels:
      app: sidekiq
  replicas: 2
  template:
    metadata:
      labels:
        app: sidekiq
        app.log.index: application
    spec:
      containers:
        - name: sidekiq
          image: 676007236/sidekiq-app:latest
