twoeyes.yml
apiVersion: v1
kind: Service
metadata:
  name: twoeyes-service
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: twoeyes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twoeyes-depolyment
spec:
  selector:
    matchLabels:
      app: twoeyes
  replicas: 2
  template:
    metadata:
      labels:
        app: twoeyes
    spec:
      containers:
        - name: twoeyes
          image: 676007236/twoeyes:1.0
