virtual_service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: twoeyes-vs
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: twoeyes-service
        #  - match:
        # - uri:
        #prefix: /
        # route:
        # - destination:
        #port:
        #  number: 5601
        #host: kibana-kibana
